--- a/Pages/SignUp/index.html
+++ b/Pages/SignUp/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../../TailwindCss/output.css">
 
     <title>SignUp</title>
@@ -19,7 +19,7 @@
                 <div class="mb-4">
                     <label for="first-name-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
                         نام
-                        <i class='bx bxs-user'></i>
+                        <i class="fa-solid fa-user"></i>
                     </label>
                     <input type="text" placeholder="First name" dir="ltr" id="first-name-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
                 </div>
@@ -27,7 +27,7 @@
                 <div class="mb-4">
                     <label for="last-name-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
                         نام خانوادگی
-                        <i class='bx bxs-user'></i>
+                        <i class="fa-solid fa-users"></i>
                     </label>
                     <input type="text" placeholder="Last name" dir="ltr" id="last-name-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
                 </div>
@@ -35,7 +35,7 @@
                 <div class="mb-4">
                     <label for="email-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
                         ایمیل
-                        <i class='bx bxs-envelope'></i>
+                        <i class="fa-solid fa-envelope"></i>
                     </label>
                     <input type="text" placeholder="Unknown@gmail.com" dir="ltr" id="email-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
                 </div>
@@ -43,7 +43,7 @@
                 <div class="mb-4">
                     <label for="password-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
                         رمز عبور
-                        <i class='bx bxs-lock-alt'></i>
+                        <i class="fa-solid fa-lock"></i>
                     </label>
                     <input type="password" placeholder="Password" dir="ltr" id="password-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
                 </div>
