fix sidebar responsive

--- a/Pages/Main/index.html
+++ b/Pages/Main/index.html
@@ -11,7 +11,7 @@
 
     <title>Home</title>
 </head>
-<body class="font-vazir bg-gray-100 transition-all">
+<body class="font-vazir bg-gray-100">
     <div id="sidebar" class="h-[100vh] bg-darkBlue z-40 fixed -right-96 transition-all duration-300 md:w-1/6 md:right-0 overflow-y-scroll md:overflow-y-auto">
         <div class="hamburger open sidebar-close-btn mr-6 mt-4 md:hidden">
             <div class="hamburger-top"></div>
@@ -19,7 +19,7 @@
             <div class="hamburger-bottom"></div>
         </div>
 
-        <ul class="text-gray-400 pr-6 pt-6 md:pt-6 transition-all">
+        <ul class="text-gray-400 pr-6 pt-6 md:pt-6">
             <li class="py-4 active-menu">
                 <a href="index.html" class="flex gap-2 items-center">
                     <i class='fas fa-home'></i><span>داشبورد</span>
