add Add User page

--- a/Pages/Main/index.html
+++ b/Pages/Main/index.html
@@ -33,19 +33,19 @@
             </li>
 
             <li class="py-4">
-                <a href="index.html" class="flex gap-2 items-center">
+                <a href="../NewUsers/index.html" class="flex gap-2 items-center">
                     <i class='fas fa-user-plus'></i><span>افزودن کاربر جدید</span>
                 </a>
             </li>
 
             <li class="py-4">
-                <a href="index.html" class="flex gap-2 items-center">
+                <a href="../Products/index.html" class="flex gap-2 items-center">
                     <i class='fas fa-shopping-cart'></i><span>محصولات</span>
                 </a>
             </li>
 
             <li class="py-4 pl-2">
-                <a href="index.html" class="flex gap-2 items-center">
+                <a href="../NewProducts/index.html" class="flex gap-2 items-center">
                     <i class='fas fa-cart-plus'></i><span>افزودن محصولات جدید</span>
                 </a>
             </li>
