--- a/Pages/SignUp/index.html
+++ b/Pages/SignUp/index.html
@@ -52,7 +52,7 @@
                 <button class="bg-lightBlue text-white rounded-md py-2 text-lg mt-4 hover:bg-darkBlue">ثبت نام</button>
             </form>
 
-            <p class="text-gray-400 font-semibold text-sm">ثبت نام کرده اید؟<a href="../../index.html" class="text-lightBlue hover:text-darkBlue"> وارد اکانت خود شوید</a></p>
+            <p class="text-gray-400 font-semibold text-sm">ثبت نام کرده اید؟<a href="../../index.html" class="text-lightBlue hover:text-darkBlue"> وارد اکانت ادمین شوید</a></p>
 
         </div>
     </main>
