--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body dir="rtl" class="font-vazir bg-gray-100">
     <main class="h-[100vh] flex justify-center items-center">
         <div class="bg-white rounded-lg w-96 py-10 px-8 mx-4">
-            <h1 class="font-semibold text-xl text-center">وارد اکانت خود شوید</h1>
+            <h1 class="font-semibold text-xl text-center">وارد اکانت ادمین شوید</h1>
 
             <form class="flex flex-col my-10">
                 <div class="mb-4">
