--- a/Pages/NewUsers/index.html
+++ b/Pages/NewUsers/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../../TailwindCss/output.css">
 
-    <title>Users</title>
+    <title>Add User</title>
 </head>
 <body class="font-vazir">
     <div id="sidebar" class="h-[100vh] bg-darkBlue z-40 fixed -right-96 transition-all duration-300 md:w-1/6 md:right-0 overflow-y-scroll md:overflow-y-auto">
@@ -25,14 +25,14 @@
                 </a>
             </li>
 
-            <li class="py-4 active-menu">
-                <a href="index.html" class="flex gap-2 items-center">
+            <li class="py-4">
+                <a href="../Users/index.html" class="flex gap-2 items-center">
                     <i class='fas fa-users'></i><span>کاربران</span>
                 </a>
             </li>
 
-            <li class="py-4">
-                <a href="../NewUsers/index.html" class="flex gap-2 items-center">
+            <li class="py-4 active-menu">
+                <a href="index.html" class="flex gap-2 items-center">
                     <i class='fas fa-user-plus'></i><span>افزودن کاربر جدید</span>
                 </a>
             </li>
@@ -90,51 +90,10 @@
             </div>
         </header>
 
-        <main class="py-6 px-4 relative">
-            <div class="bg-white rounded-md shadow-custom px-3 py-6">
-                <h2 class="font-lalezar text-lg">لیست <span class="text-lightBlue">کاربران</span></h2>
+        <main class="py-3 px-6 relative">
+            <h2 class="font-lalezar text-2xl">افزودن کاربر جدید</h2>
 
-                <div class="overflow-x-auto">
-                    <table class="w-[600px] mx-auto md:w-full mt-4 overflow-x-auto">
-                        <thead class="bg-gray-100">
-                          <tr>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">شناسه</th>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">نام</th>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">نام خانوادگی</th>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">ایمیل</th>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">رمز عبور</th>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">نقش</th>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">ویرایش</th>
-                            <th class="text-center text-gray-500 font-lalezar text-lg py-2">حذف</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr class="align-middle">
-                            <td class="text-center py-2">1</td>
-                            <td class="text-center py-2">amin</td>
-                            <td class="text-center py-2">saeedi</td>
-                            <td class="text-center py-2">gmail</td>
-                            <td class="text-center py-2">amin0101</td>
-                            <td class="text-center py-2">مدیر</td>
-                            <td class="text-center py-2">
-                              <button type="button" class="bg-blue-600 py-2 px-4 rounded-md text-white text-sm">
-                                ویرایش
-                              </button>
-                            </td>
-                            <td class="text-center py-2">
-                              <button type="button" class="bg-red-600 py-2 px-4 rounded-md text-white text-sm">
-                                حذف
-                              </button>
-                            </td>
-                          </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-            <div class="bg-white shadow-custom rounded-md py-4 px-6">
-                <i class="fas fa-arrow-right cursor-pointer mb-2"></i>
-
+            <div class="bg-white px-4 py-7">
                 <form class="space-y-2 sm:grid sm:grid-cols-2 sm:gap-x-7 sm:gap-y-2 sm:space-y-0">
                     <div>
                         <label class="font-lalezar text-lg">نام</label>
@@ -182,14 +141,14 @@
                         </div>
                         
                         <div>
-                            <input type="submit" value="ویرایش" class="bg-blue-600 py-2 px-5 rounded-md text-white text-sm">
+                            <input type="submit" value="افزودن" class="bg-blue-600 py-2 px-5 rounded-md text-white text-sm">
                         </div>
                     </div>
                 </form>
             </div>
-        </main>    
+        </main>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/custom.js"></script>
     <script src="js/script.js"></script>
