--- a/Pages/SignUp/index.html
+++ b/Pages/SignUp/index.html
@@ -17,19 +17,21 @@
 
             <form class="flex flex-col my-6">
                 <div class="mb-4">
-                    <label for="first-name-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
+                    <label for="firstname-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
                         نام
                         <i class="fa-solid fa-user"></i>
                     </label>
-                    <input type="text" placeholder="First name" dir="ltr" id="first-name-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
+                    <input type="text" placeholder="First name" dir="ltr" id="firstname-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
+                    <span class="text-red-400 text-sm hidden">لطفا نام خود رو وارد کنید</span>
                 </div>
 
                 <div class="mb-4">
-                    <label for="last-name-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
+                    <label for="lastname-input" class="flex items-center gap-1 text-gray-400 font-semibold text-xs mb-2">
                         نام خانوادگی
                         <i class="fa-solid fa-users"></i>
                     </label>
-                    <input type="text" placeholder="Last name" dir="ltr" id="last-name-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
+                    <input type="text" placeholder="Last name" dir="ltr" id="lastname-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
+                    <span class="text-red-400 text-sm hidden">لطفا نام خود رو وارد کنید</span>
                 </div>
 
                 <div class="mb-4">
@@ -38,6 +40,7 @@
                         <i class="fa-solid fa-envelope"></i>
                     </label>
                     <input type="text" placeholder="Unknown@gmail.com" dir="ltr" id="email-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
+                    <span class="text-red-400 text-sm hidden">لطفا نام خود رو وارد کنید</span>
                 </div>
 
                 <div class="mb-4">
@@ -46,10 +49,11 @@
                         <i class="fa-solid fa-lock"></i>
                     </label>
                     <input type="password" placeholder="Password" dir="ltr" id="password-input" class="border w-full p-2 rounded-md focus:outline-gray-500 placeholder:text-sm">
+                    <span class="text-red-400 text-sm hidden">لطفا نام خود رو وارد کنید</span>
                 </div>
 
 
-                <button class="bg-lightBlue text-white rounded-md py-2 text-lg mt-4 hover:bg-darkBlue">ثبت نام</button>
+                <button id="submit-btn" class="bg-lightBlue text-white rounded-md py-2 text-lg mt-4 hover:bg-darkBlue">ثبت نام</button>
             </form>
 
             <p class="text-gray-400 font-semibold text-sm">ثبت نام کرده اید؟<a href="../../index.html" class="text-lightBlue hover:text-darkBlue"> وارد اکانت ادمین شوید</a></p>
@@ -57,5 +61,8 @@
         </div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
