--- a/Pages/SignUp/index.html
+++ b/Pages/SignUp/index.html
@@ -11,7 +11,7 @@
     <title>SignUp</title>
 </head>
 <body dir="rtl" class="font-vazir bg-gray-100">
-    <main class="h-[100vh] flex justify-center items-center">
+    <main class="h-[100vh] flex justify-center items-center my-6">
         <div class="bg-white rounded-lg w-96 p-6 mx-4">
             <h1 class="font-semibold text-xl text-center">ثبت نام کنید</h1>
 
@@ -62,7 +62,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/custom.js"></script>
+    <script src="../../Vendor/sweetAlert/sweetalert.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
