--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./Pages/SignIn/js/custom.js"></script>
+    <script src="./Vendor/sweetAlert/sweetalert.js"></script>
     <script src="./Pages/SignIn/js/script.js"></script>
 </body>
 </html>
